log
Wed 23 Aug 2023 07:39:05 PM UTC: 
 tests:  0|6
total_score: 0/70
a0471d2
Wed 23 Aug 2023 07:42:08 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8301dbb
Wed 23 Aug 2023 07:44:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
207eb43
Wed 23 Aug 2023 07:46:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c704778
Wed 23 Aug 2023 07:52:20 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
fc22e7c
Wed 23 Aug 2023 07:55:07 PM UTC: 
 list.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
b880927
Wed 23 Aug 2023 07:56:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d83435c
Wed 23 Aug 2023 07:57:29 PM UTC: 
 list.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  2|5
total_score: 15/70
9bdbd7f
Wed 23 Aug 2023 07:59:51 PM UTC: 
 list.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  2|5
total_score: 15/70
c38de26
Wed 23 Aug 2023 08:00:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
45601f3
Wed 23 Aug 2023 08:02:15 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
7623f16
Wed 23 Aug 2023 08:03:14 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
87fc449
Wed 23 Aug 2023 08:04:18 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
fa25f71
Wed 23 Aug 2023 08:05:32 PM UTC: 
 list.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  0|0
aafaa5e
Wed 23 Aug 2023 08:05:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bd59fb6
Wed 23 Aug 2023 08:06:07 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
fc8ea66
Wed 23 Aug 2023 08:07:17 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
1df97a3
Wed 23 Aug 2023 08:09:03 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
b762e6d
Wed 23 Aug 2023 08:16:02 PM UTC: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  5|4
total_score: 25/70
1e5ce15
Wed 23 Aug 2023 08:17:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
96d9946
Wed 23 Aug 2023 08:18:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
fa7402b
Wed 23 Aug 2023 08:18:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
a407894
Wed 23 Aug 2023 08:19:47 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f353342
Wed 23 Aug 2023 08:21:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8de388a
Wed 23 Aug 2023 08:24:43 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
0cb1f0e
Wed 23 Aug 2023 08:26:19 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
97b45a7
Wed 23 Aug 2023 08:28:48 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
331cf9e
Wed 23 Aug 2023 08:31:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1cc0699
Wed 23 Aug 2023 08:33:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:24: error: ‘NULLsh’ undeclared (first use in this function); did you mean ‘NULL’?
   70 |   if (list->current == NULLsh ){
      |                        ^~~~~~
      |                        NULL
list.c:70:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a55f32b
Wed 23 Aug 2023 08:34:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
85ed6ba
Wed 23 Aug 2023 08:34:45 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
69938da
Wed 23 Aug 2023 08:36:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
3e5e3b3
Wed 23 Aug 2023 09:00:55 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
fe39e2a
Wed 23 Aug 2023 09:04:10 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
eca5651
Wed 23 Aug 2023 09:04:47 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  9|3
total_score: 35/70
6f1a184
Wed 23 Aug 2023 09:05:44 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
acc73f7
Wed 23 Aug 2023 09:20:53 PM UTC: 
 list.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  11|1
total_score: 55/70
70ba680
Wed 23 Aug 2023 09:30:51 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  10|2
total_score: 45/70
ecf9949
Wed 23 Aug 2023 09:31:29 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|1
total_score: 55/70
4ef0907
